frontend/src/styles/mobile-styles.scss
@use './globals.scss' as *;

$large-mobile-width: 700px;
$small-mobile-width: 360px;

@mixin navbar {
  @media (max-width: $large-mobile-width) {
    .navbar {
        width: 100%;
        overflow: hidden;
        max-height: 0px;
        visibility: collapse;
        @include transition(max-height visibility);

        &--open{
          visibility: visible;
          display: block;
          max-height: 500px;
        }

        &__item {
          padding: 1em;
          border-bottom: 1px solid $monokai-selection;

          &:hover {
            border: none;
          }
        }
    }
  }
}

@mixin list {
  @media (max-width: $large-mobile-width) {
    .list {
      flex-direction: column;
    }
  }
}

@mixin header {
  @media (max-width: $large-mobile-width) {
    .header {
      flex-wrap: wrap;

      &__menu {
        margin-right: 1em;
        @include flex-center(space-evenly);
      }
    }
  }
}

@mixin logo {
  @media (max-width: $small-mobile-width) {
    .logo {
      &__icon {
        scale: 0.9;
      }

      &__title {
        font-size: 1.7rem;
      }
    }
  }
}

@mixin main {
  @media (max-width: $large-mobile-width) {
    .main {
      width: 80%;
    }
  }
}

